--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -453,40 +453,31 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
-.about {
-  padding: 0;
-  margin-top: 40px;
-}
-.about .container {
-  background-color: #f7f8f9;
-  padding: 60px 50px;
-}
-@media (max-width: 992px) {
-  .about .container {
-    padding: 30px;
-  }
-}
 .about .content h3 {
-  font-weight: 400;
-  font-size: 32px;
-  color: #364146;
-  font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-size: 32px;
+    color: #5f687b;
 }
+
 .about .content ul {
-  list-style: none;
-  padding: 0;
+    list-style: none;
+    padding: 0;
 }
-.about .content ul li {
-  padding-bottom: 10px;
-}
-.about .content ul i {
-  font-size: 20px;
-  padding-right: 4px;
-  color: #28a745;
-}
+
+    .about .content ul li {
+        padding-bottom: 10px;
+    }
+
+    .about .content ul i {
+        font-size: 20px;
+        padding-right: 4px;
+        color: #16df7e;
+    }
+
 .about .content p:last-child {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
+
 
 /*--------------------------------------------------------------
 # Features
@@ -1109,60 +1100,37 @@ section {
   color: #fff;
 }
 
+
 /*--------------------------------------------------------------
-# Frequently Asked Questions
+# F.A.Q
 --------------------------------------------------------------*/
-.faq {
-  padding: 60px 0;
-}
-.faq .faq-list {
-  padding: 0;
-  list-style: none;
-}
-.faq .faq-list li {
-  border-bottom: 1px solid #e3e7e9;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-}
-.faq .faq-list .question {
-  display: block;
-  position: relative;
-  font-family: #009cea;
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: 400;
-  padding-left: 25px;
-  cursor: pointer;
-  color: #007ab7;
-  transition: 0.3s;
-}
-.faq .faq-list i {
-  font-size: 16px;
-  position: absolute;
-  left: 0;
-  top: -2px;
-}
-.faq .faq-list p {
-  margin-bottom: 0;
-  padding: 10px 0 0 25px;
-}
-.faq .faq-list .icon-show {
-  display: none;
-}
-.faq .faq-list .collapsed {
-  color: black;
-}
-.faq .faq-list .collapsed:hover {
-  color: #009cea;
-}
-.faq .faq-list .collapsed .icon-show {
-  display: inline-block;
-  transition: 0.6s;
-}
-.faq .faq-list .collapsed .icon-close {
-  display: none;
-  transition: 0.6s;
-}
+    .faq .accordion-collapse {
+        border: 0;
+    }
+
+    .faq .accordion-button {
+        padding: 15px 15px 20px 0;
+        font-weight: 600;
+        border: 0;
+        font-size: 18px;
+        color: #444444;
+        text-align: left;
+    }
+
+        .faq .accordion-button:focus {
+            box-shadow: none;
+        }
+
+        .faq .accordion-button:not(.collapsed) {
+            background: none;
+            color: #4154f1;
+            border-bottom: 0;
+        }
+
+    .faq .accordion-body {
+        padding: 0 0 25px 0;
+        border: 0;
+    }
 
 /*--------------------------------------------------------------
 # Contact
