--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,6 +478,12 @@ section {
     margin-bottom: 0;
 }
 
+.about h4 {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.5;
+}
+
 
 /*--------------------------------------------------------------
 # Features
@@ -1515,4 +1521,98 @@ section {
     height: 200px;
 }
 
+/**
+    Swiper
+*/
+.custom-swiper-button-next,
+.custom-swiper-button-prev {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 9;
+}
+
+@media (max-width: 768px) {
+
+    .custom-swiper-button-next,
+    .custom-swiper-button-prev {
+        display: none;
+    }
+}
+
+.custom-swiper-button-next span,
+.custom-swiper-button-prev span {
+    font-size: 20px;
+    color: rgba(var(--color-white-rgb), 0.7);
+    transition: 0.3s all ease;
+}
+
+.custom-swiper-button-next:hover span,
+.custom-swiper-button-next:focus span,
+.custom-swiper-button-prev:hover span,
+.custom-swiper-button-prev:focus span {
+    color: rgba(var(--color-white-rgb), 1);
+}
+
+.custom-swiper-button-next {
+    right: 40px;
+}
+
+.custom-swiper-button-prev {
+    left: 40px;
+}
+
+.swiper-pagination .swiper-pagination-bullet {
+    background-color: rgba(var(--color-white-rgb), 0.8);
+}
+
+.swiper-pagination .swiper-pagination-bullet-active {
+    background-color: rgba(var(--color-white-rgb), 1);
+}
+
+.slider-img {
+    height: 360px;
+}
+
+
+/*--------------------------------------------------------------
+# Counts
+--------------------------------------------------------------*/
+.counts {
+    padding: 70px 0 60px;
+}
+
+    .counts .count-box {
+        display: flex;
+        align-items: center;
+        padding: 30px;
+        width: 100%;
+        background: #fff;
+        box-shadow: 0px 0 30px rgba(1, 41, 112, 0.08);
+    }
+
+        .counts .count-box i {
+            font-size: 42px;
+            line-height: 0;
+            margin-right: 20px;
+            color: #4154f1;
+        }
+
+        .counts .count-box span {
+            font-size: 32px;
+            display: block;
+            font-weight: 400;
+            color: #0b198f;
+        }
+
+        .counts .count-box p {
+            display: inline;
+            padding: 0;
+            margin: 0;
+            font-size: 22px;
+            font-weight: 400;
+            color: #0b198f;
+        }
+
+        
   
