--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1325,7 +1325,10 @@ section {
 }
 
 .gallery .gallery-item img {
+  width:400px;
+  height:auto;
   transition: 0.3s;
+  border-radius: 10px !important;
 }
 
 .gallery .gallery-links {
@@ -1367,6 +1370,7 @@ section {
 
 .gallery .gallery-item:hover img {
   transform: scale(1.1);
+  border-radius: 10px !important;
 }
 
 .glightbox-clean .gslide-description {
@@ -1377,6 +1381,16 @@ section {
   color: rgba(255, 255, 255, 0.8);
   margin: 0;
 }
+
+.gallery-icon-box {
+  padding: 20px;
+  color: #5f687b;
+  #background: #f9f9fa;
+  border-radius: 4px;
+  border: 0px solid #f9f9fa;
+  transition: 0.3s;
+  height: 100%;
+  border-color: #eaecef;
 
 /*--------------------------------------------------------------
 # Gallery Single Section
